rydde i pommer (#680)
* rydde i pommer

* rydde i pommer

* rydde i pommer

* rydde i pommer

* rydde